# bl

./: .gitignore  README.md  bench.sh  main.py  pyproject.toml
benchmark/ak_benchmark/: bench_cold.sh  bench_hot.sh  repo.yaml
benchmark/ak_benchmark/patches/odoo/: 0001-FIX-pos-updatePricelist-no-undefined-fiscal-pos.patch
benchmark/bl_benchmark/: bench_cold.sh  bench_hot.sh  clean.sh
benchmark/bl_benchmark/patches/odoo/: 0001-account-remove-broken-feature-that-commit-in-the-mid.patch
bl/: __main__.py  freezer.py  spec_parser.py  spec_processor.py  types.py  utils.py
dev_folder/: cli_library_research.md  frozen_sha_research.md  ideas.md  spec_processor_research.md  what_does_not_speed_up_the_cli.md
dev_folder/plan/: processor_plan.md
dev_folder/plan/frozen_sha/: 01_data_shape.md  02_parser_wiring.md  03_processor_integration.md  04_validation.md
dev_tool/: check_diff.sh
tests/: test_frozen_parser.py  test_frozen_processor.py
