[project]
name = "bl"
version = "0.1.0"
description = "A new Python project"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
dependencies = [
    "python>=3.12",
    "rich",
    "typer",
]
requires-python = ">=3.12"
readme = "README.md"
license = { file="LICENSE" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-data]
"bl" = ["py.typed"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
